VERSION "4.3.76"  jan 2012
volume control for MIDI, fix for Mesngeau fourish and midi

VERSION "4.3.75"  May 29 2011
fix thick bar for four and five bar staves
make 4 and 5 staff lines work with -h ital to french conversion
(makes them work for whole file)

VERSION "4.3.74"  April 11 2011
fix cewnterline, broken in last title.cc fix

VERSION "4.3.73"  Feb 21 2011
adding seventh course to nmidi

VERSION "4.3.72"  Feb 21 2011
added a fix to title.cc for nmidi with lots of titles
Just take the first one

VERSION "4.3.71"  Feb 10 2011
Big rewriting of title.cc

VERSION "4.3.70" Nov 29 2010
fix time signatures for seven lines

VERSION "4.3.69" Nov 27 2010
fixed repeat dots for seven staves

VERSION "4.3.68"
fixed buffer overflow on title.cc -  LLINE

VERSION "4.3.67" November 21 2010
fixed baroque 2, 3, 8 and 9 bourdons to work

VERSION "4.3.66"  November 21 2020
fixed do_nmidi to handle i l and k

#define VERSION "4.3.65"  Oct 17 2010
added a fix when a ] is followed by } or / in a title

VERSION "4.3.64"  April 2009
fixed offset of SO and So time signatures
Added S0
added -twelvedot
July 09 check for null pointer pass1.cc 
July 09 added a few checks for null pointers in notes.cc

VERSION "4.3.63" Sept 2008
fixed spacing on long s

fixed nmidi "Breve"
working in improving "sustain" function


VERSION "4.3.60"  Mar 7 2008
changed squiggle "Q" to vector drawn character which makes gs happier
 Fix for [text interfering with score
Fix for flat in tuning

VERSION "4.3.59"  Feb 5 2008
added check for -o with no file specified
fixed score = j treated like i
changed v to have no width when used without barline

VERSION "4.3.58"  Dec 2007
forgotten changes to dvi_f, nmidi, do_nmidi (probably for high notes)
changed copyright dates to 2008

VERSION "4.3.57   Sept 2007

fixed conversion (-h) for n, m

VERSION "4.3.56"  Feb 10 2007

starting to add thin renaissance font

VERSION "4.3.55"  Feb 8 2007

In dvi_f added check for music only in middle of grids
