@@ -54,11 +54,13 @@ ps_print::ps_print(font_list *font_array[], file_info *f)
     else
       ps_top_of_page = 98670000;
     /*    printf("top of page %f %f %u %u\n",  
-	   dvi_to_inch(ps_top_of_page),
+    	   dvi_to_inch(ps_top_of_page),
 	   dvi_to_mm(ps_top_of_page),
 	   ps_top_of_page,
 	   mm_to_dvi(32.42)); */
     /*     for (int i=0; i< 256; i++) ps_used[i] = 0; */
+//    printf("ps_print: top: %d %d\n", f->top_margin, pt_to_dvi(f->top_margin));
+    ps_top_of_page += pt_to_dvi(72 - f->top_margin);
     f_i = f;
     f_a = font_array;
     f_name[0] = '\0';
