@@ -4,44 +4,9 @@
 
 b
 1 c
-1000000
-1023200
-1 2
-1     0
-x     2
-x     4
-x    0
-x    2
-x    4
-x   0
-x   2
-x  0
-x  2
-x  3
-x 0
-x 2
-x 4
-x0
-x1
-x2
-x3
-x4
-x5
-x6
-x7
-x8
-x9
-1-!x!x!x!x!x!x
-2-N10N11N12
-2-N11
-2-N12
-2-N13
-2-N14
-2-N15
-2-N16
 b
 e
-1bcd
+1abcd
 11234
 So
 b
